syntax = "proto3";

package raft;

import "pkg/raft/proto/consensus.proto";
import "pkg/raft/proto/consensus_state.proto";
import "pkg/raft/proto/ident.proto";
import "pkg/protobuf/compiler/proto/extensions.proto";

// Identifier used to define a single set of machines running an instance of the Raft
// protocol. ServerIds are only comparable within the same cluster.
message GroupId {
    option (dacha.typed_num) = true;
    uint64 value = 1;
}

// This is the format of the metadata file being persisted to disk
message ServerMetadata {
    // REQUIRED
    GroupId group_id = 1;
    
    // REQUIRED
    ServerId id = 2;

    // REQUIRED
    Metadata meta = 3;

    // REQUIRED
    ConfigurationSnapshot config = 4;
}
